fix: text overflow, update footer

--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@
 }
 
 .header-nav {
-  padding-top: 4px;
+  margin-top: 4px;
   background-color: #2d303a;
 }
 
@@ -131,9 +131,9 @@
 .iphone-screen-content-vertical {
   position: absolute;
   top: 85px;
-  left: 50px;
+  left: 52px;
   z-index: 1100;
-  border: 3px solid #c6c6c6;
+  border: 2px solid #c6c6c6;
   border-radius: 3px;
 }
 
@@ -153,9 +153,9 @@
 
 .iphone-screen-content-horizontal {
   position: absolute;
-  top: 156px;
-  right: 130px;
-  border: 3px solid #c6c6c6;
+  top: 155px;
+  right: 128px;
+  border: 2px solid #c6c6c6;
   border-radius: 3px;
 }
 
@@ -174,6 +174,7 @@
 .services-items {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: minmax(94px, 94px) minmax(94px, 94px);
   gap: 30px 20px;
   align-items: start;
   padding: 0;
@@ -182,10 +183,11 @@
 
 .services-item {
   display: inline-grid;
-  grid-template-columns: 60px 219px;
+  grid-template-columns: minmax(60px, 60px) minmax(219px, 219px);
+  grid-template-rows: auto minmax(64px, 64px);
   grid-template-areas:
     "icon title"
-    "icon paragraph";
+    "icon description";
   grid-column-gap: 20px;
   grid-row-gap: 10px;
   padding: 0;
@@ -197,7 +199,7 @@
   grid-area: icon;
   height: 59px;
   width: 59px;
-  margin: 0;
+  margin: 2px 0 0 0;
   border: 2px solid #666d89;
   border-radius: 50%;
 }
@@ -218,10 +220,9 @@
 }
 
 .services-item-description {
-  margin: 0;
-  padding: 0;
+  grid-area: description;
   font-size: 12px;
-  line-height: 22px;
+  line-height: 21px;
   font-family: "Lato", sans-serif;
   font-weight: 400;
   text-align: justify;
@@ -333,7 +334,7 @@
 }
 
 .about_us {
-  padding: 64px 40px 68px 40px;
+  padding: 64px 40px 67px 40px;
   color: #666d89;
   background-color: #f2f2f2;
   border-bottom: 6px solid #ffffff;
@@ -341,7 +342,7 @@
 
 .about_us-persons {
   display: grid;
-  padding-top: 44px;
+  margin-top: 44px;
   grid-template-columns: minmax(300px, 300px) minmax(300px, 300px) minmax(300px, 300px);
   gap: 20px 20px;
 }
@@ -419,7 +420,7 @@
 }
 
 .get_a_quote-form {
-  padding-top: 15px;
+  margin-top: 13px;
   display: grid;
   grid-template-rows: auto;
   gap: 16px;
@@ -470,12 +471,12 @@
 }
 
 .contact_info {
-  padding-top: 15px;
+  margin-top: 13px;
 }
 
 .contact_info-title {
   font-size: 18px;
-  line-height: 18px;
+  line-height: 20px;
   font-family: "Lato", sans-serif;
   font-weight: 900;
   text-align: left;
@@ -483,9 +484,9 @@
 }
 
 .contact_info-description {
-  padding-top: 10px;
+  margin-top: 9px;
   font-size: 12px;
-  line-height: 22px;
+  line-height: 21px;
   font-family: "Lato", sans-serif;
   font-weight: 400;
   text-align: justify;
@@ -494,7 +495,7 @@
 }
 
 .contact_info-links {
-  padding-top: 20px;
+  margin-top: 22px;
   font-size: 12px;
   line-height: 22px;
   font-family: "Lato", sans-serif;
@@ -537,12 +538,13 @@
 }
 
 .contact_info-link-description {
-  padding-left: 10px;
+  margin-left: 7px;
 }
 
 .contact_info-link-icon {
-  height: 14px;
-  width: 14px;
+  margin-top: 4px;
+  height: 12px;
+  width: 15px;
   filter: invert(1);
 }
 
